apps/guestbook/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gyestbook-server
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`jscanlon-mac.clouddevopsdemo.com`)
      priority: 10
      services:
        - name: guestbook-ui
          port: 2222
    - kind: Rule
      match: Host(`jscanlon-mac.clouddevopsdemo.com`) && Header(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: guestbook-ui
          port: 2222
          scheme: h2c
  tls:
    certResolver: default
